--- a/index.html
+++ b/index.html
@@ -125,16 +125,16 @@
             <div class="line3"></div>
           </div>
           <ul class="nav-list">
-            <li><a href="#s-home">01. HOME</a></li>
-            <li><a href="#s-about">02. ABOUT</a></li>
+            <li><a href="#s-home">HOME</a></li>
+            <li><a href="#s-about">ABOUT</a></li>
             <li>
-              <a href="#s-projects">03. PROJECT</a>
+              <a href="#s-projects">PROJECT</a>
             </li>
             <li>
-              <a href="#s-services">04. WHAT I DO</a>
+              <a href="#s-services">WHAT I DO</a>
             </li>
             <li>
-              <a href="#s-skills">05. SKILLS</a>
+              <a href="#s-skills">SKILLS</a>
             </li>
           </ul>
         </nav>
@@ -267,13 +267,13 @@
           <h2 class="delaySmallReveal"><span><</span> Project <span>></span></h2>
           <div id="projects">
             <article class="intervalCardReveal teslabank">
-              <h3>Dedsec wifi phishing</h3>
+              <h3>DEDSEC_RANSOMWARE</h3>
               <p>
-                It can create fake access points and captive portal to redirect users to the fake login page.
+                Linux based ransomware tool that can create a ransomware code with discord integration.
               </p>
 
               <a
-                href="https://github.com/0xbitx/dedsec-wifiphish_v2"
+                href="https://github.com/0xbitx/DEDSEC_RANSOMWARE"
                 rel="noopener"
                 target="_blank"
                 id="dedsec"
@@ -282,13 +282,13 @@
             </article>
 
             <article class="intervalCardReveal naped">
-              <h3>Dedsec OTP bypass</h3>
+              <h3>DEDSEC_TROJANIZE</h3>
               <p>
-                Phishing tool that support OTP bypass method.
+                Linux based tool that can add malicious code to a legitimate python code file 
               </p>
 
               <a
-                href="https://github.com/0xbitx/dedsec-otp-bypass"
+                href="https://github.com/0xbitx/DEDSEC_TROJANIZE"
                 rel="noopener"
                 target="_blank"
                 id="dedsec"
@@ -297,12 +297,12 @@
             </article>
 
             <article class="intervalCardReveal efront">
-              <h3>Dedsec-Malware</h3>
+              <h3>DEDSEC_DISCORD_REVL</h3>
               <p>
-                This tool create fake wifi and captive portal to deploy malware, that can be download by the user to access fake free internet.
+                Linux based tool that can dump discord user information like userid, user ip, email, phonenumber, token, nitro, etc .
               </p>
               <a
-                href="https://github.com/0xbitx/dedsec-malware"
+                href="https://github.com/0xbitx/DEDSEC_DISCORD_REVL"
                 rel="noopener"
                 target="_blank"
                 id="dedsec"
@@ -336,8 +336,8 @@
               <h3>Building hacking tool</h3>
               <p>
                 Esp32 deauther, Esp32 bluetooth killer
-                Esp32 Evil twin, Esp32 IR decryptor,
-                Arduino 3G jammer, Phishing tool.
+                Esp32 Evil twin, Esp32 IR decryptor, tracker, ddos tool,
+                Arduino 3G jammer, password dumper, Phishing tool, camera exploit.
               </p>
             </article>
 
