--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <div id="home-container-text">
               <h1 class="delayMediumReveal">
                 0XBIT
-                <div class = "gg" title="404">I LOVE SOMEONE'S PRIVACY</div>
+                <div class = "gg" title="404">GO TO SCHOOL, HOME, HACK</div>
               </h1>
               <p class="typewriter">
                 I am a computer enthusiast from the Philippines. I create hacking tools and exploits. Check out some of my work in the Projects section.
@@ -218,7 +218,7 @@
             <article id="about-text">
               <h2 class="delaySmallReveal"><span><</span>0xbit<span>></span></h2>
               <p class="delayMediumReveal">
-                Im 20 yrs old computer enthusiast Focus in Hardware hacking and building hacking tools
+                Im 20 yrs old Tool Developer Focus in Hardware hacking and building hacking tools
               </p>
             </article>
           </div>
