--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
               </div>
               <h5 class="companyExperience">IoT hacking tool</h5>
               <p class="changeExperience">
-                IoT devices are small computers, usually running Linux, that are performing a certain function. Like any other internet/ cloud connected device these can be hacked. What’s worse, is that most devices lack proper UI and come with default passwords that make it easy for people from remote to hack them.
+                Steeped in the realm of IoT hacking, my experience revolves around crafting innovative solutions for interconnected devices. From devising security measures to navigating the intricacies of smart systems, my journey is marked by a passion for ethical hacking in the dynamic landscape of IoT technology.
               </p>
             </div>
           </div>
