--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 </h4>
                 <p class="dateExperience">Jan 2019 - Dec 2023 </p>
               </div>
-              <h5 class="companyExperience">IoT hacking tool</h5>
+              <h5 class="companyExperience">Building hacking device</h5>
               <p class="changeExperience">
                 Steeped in the realm of IoT hacking, my experience revolves around crafting innovative solutions for interconnected devices. From devising security measures to navigating the intricacies of smart systems, my journey is marked by a passion for ethical hacking in the dynamic landscape of IoT technology.
               </p>
