--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <h3>windows os</h3>
               </div>
               <div class="company codigofontetv">
-                <h3>bluetooth </h3>
+                <h3>Network </h3>
               </div>
             </div>
             <div class="text-experience intervalCardReveal">
