--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </div>
 
             <img
-              src="assets/image/ded5.png"
+              src="assets/image/profile.png"
               alt="dedsec"
               onload="SVGInject(this)"
               id="logo"
