--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
             <div>
               <p>Powered by</p>
               <img
-                src="assets/icons/web.png"
+                src="assets/icons/key.png"
                 alt="dedsec"
                 width="60px"
                 height="60px"
