--- a/index.html
+++ b/index.html
@@ -36,7 +36,15 @@
     <link rel="apple-touch-icon" href="assets/image/logo-page.svg" />
     <link rel="canonical" href="https://github.com/0xbitx" />
     <script src="assets/js/svg-inject.min.js"></script>
+    <style>
+
+      @font-face {
+          font-family: 'LiveOverfont';
+          src: url('LiveOverfont.woff') format('woff');
+      }
+  </style>
     <title>0xbit</title>
+
   </head>
 
   <body>
@@ -152,7 +160,7 @@
               </div>
             </div>
             <article id="about-text">
-              <h2 class="delaySmallReveal"style="color: red; font-family: 'LiveOverfont', sans-serif; font-size: 40px;"> < 0xbit > </h2>
+              <h2 class="delaySmallReveal" style="color: red; font-family: 'LiveOverfont', sans-serif; font-size: 40px;"> < 0xbit > </h2>
               <p class="delayMediumReveal">
                 Im 20 yrs old Tool Developer Focus in Hardware hacking and building hacking tools
               </p>
@@ -203,7 +211,7 @@
           <h2 class="delaySmallReveal" style="color: red; font-family: 'LiveOverfont', sans-serif; font-size: 40px;"> < Project > </h2>
           <div id="projects">
             <article class="intervalCardReveal teslabank">
-              <h3>DEDSEC_RANSOMWARE</h3>
+              <h3 style="color: white; font-family: 'LiveOverfont', sans-serif; font-size: 40px;">DEDSEC_RANSOMWARE</h3>
               <p>
                 Linux based ransomware tool that can create a ransomware code with discord integration.
               </p>
@@ -217,7 +225,7 @@
             </article>
 
             <article class="intervalCardReveal naped">
-              <h3>DEDSEC_TROJANIZE</h3>
+              <h3 style="color: white; font-family: 'LiveOverfont', sans-serif; font-size: 40px;">DEDSEC_TROJANIZE</h3>
               <p>
                 Linux based tool that can add malicious code to a legitimate python code file 
               </p>
@@ -232,7 +240,7 @@
             </article>
 
             <article class="intervalCardReveal efront">
-              <h3>DEDSEC_DISCORD_REVL</h3>
+              <h3 style="color: white; font-family: 'LiveOverfont', sans-serif; font-size: 40px;">DEDSEC_DISCORD_REVL</h3>
               <p>
                 Linux based tool that can dump discord user information like userid, user ip, email, phonenumber, token, nitro, etc .
               </p>
