--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
           <div id="about">
             <div id="about-photo">
               <img
-                src="assets/image/ded6.png"
-                width="500px"
-                height="500px"
+                src="https://cdn-icons-png.flaticon.com/512/207/207147.png"
+                width="100px"
+                height="100px"
                 alt="dedsec"
                 class="delayMediumReveal"
                 id="dedsec"
@@ -142,7 +142,7 @@
               </div>
               <div class="about-figure figure-two icon-two delayExtraBigReveal">
                 <img
-                  src="assets/icons/bitcoin.png"
+                  src="assets//icons/bitcoin.png"
                   width="45px"
                   height="45px"
                   alt="ícone css"
@@ -161,8 +161,8 @@
             </div>
             <article id="about-text">
               <h2 class="delaySmallReveal" style="color: red; font-family: 'LiveOverfont', sans-serif; font-size: 40px;"> < 0xbit > </h2>
-              <p class="delayMediumReveal">
-                Im 20 yrs old Tool Developer Focus in Hardware hacking and building hacking tools
+              <p class="delayMediumReveal" style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 30px;">
+                I am a 20-year-old Tool Developer specializing in the creation of cutting-edge Linux malware. My focus revolves around the development and optimization of malicious tools tailored for Linux systems, delving into the intricate realm of cybersecurity with a particular emphasis on unconventional and sophisticated hacking techniques.
               </p>
             </article>
           </div>
@@ -211,7 +211,7 @@
           <h2 class="delaySmallReveal" style="color: red; font-family: 'LiveOverfont', sans-serif; font-size: 40px;"> < Project > </h2>
           <div id="projects">
             <article class="intervalCardReveal teslabank">
-              <h3 style="color: white; font-family: 'LiveOverfont', sans-serif; font-size: 40px;">DEDSEC_RANSOMWARE</h3>
+              <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 30px;">DEDSEC_RANSOMWARE</h3>
               <p>
                 Linux based ransomware tool that can create a ransomware code with discord integration.
               </p>
@@ -225,7 +225,7 @@
             </article>
 
             <article class="intervalCardReveal naped">
-              <h3 style="color: white; font-family: 'LiveOverfont', sans-serif; font-size: 40px;">DEDSEC_TROJANIZE</h3>
+              <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 30px;">DEDSEC_TROJANIZE</h3>
               <p>
                 Linux based tool that can add malicious code to a legitimate python code file 
               </p>
@@ -240,7 +240,7 @@
             </article>
 
             <article class="intervalCardReveal efront">
-              <h3 style="color: white; font-family: 'LiveOverfont', sans-serif; font-size: 40px;">DEDSEC_DISCORD_REVL</h3>
+              <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 30px;">DEDSEC_DISCORD_REVL</h3>
               <p>
                 Linux based tool that can dump discord user information like userid, user ip, email, phonenumber, token, nitro, etc .
               </p>
@@ -276,7 +276,7 @@
                   alt="dedsec"
                 />
               </div>
-              <h3 style="color: white; font-family: 'LiveOverfont', sans-serif; font-size: 30px;">Building hacking tool</h3>
+              <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 30px;">Building hacking tool</h3>
               <p>
                 Esp32 deauther, Esp32 bluetooth killer
                 Esp32 Evil twin, Esp32 IR decryptor, tracker, ddos tool,
@@ -293,7 +293,7 @@
                   alt="dedsec"
                 />
               </div>
-              <h3 style="color: white; font-family: 'LiveOverfont', sans-serif; font-size: 30px;">Building Computer Virus </h3>
+              <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 30px;">Building Computer Virus </h3>
               <p>
                 Linux based virus,malware,ransomeware.
               </p>
@@ -308,7 +308,7 @@
                   alt="ícone imagem"
                 />
               </div>
-              <h3 style="color: white; font-family: 'LiveOverfont', sans-serif; font-size: 30px;">Trolling Corrupt People</h3>
+              <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 30px;">Trolling Corrupt People</h3>
               <p>
                 trolling LGU (Local Government Unit),
                 Politicians, Government Employee in the philippines
@@ -417,7 +417,7 @@
 
         <footer>
           <div class="grid-layout">
-            <p id="direitos-autorais">© 2023 0xbit</p>
+            <p id="direitos-autorais">© 2024 0xbit</p>
             <div>
               <p>Powered by</p>
               <img
