--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             </div>
             <article id="about-text">
               <h2 class="delaySmallReveal" style="color: red; font-family: 'LiveOverfont', sans-serif; font-size: 40px;"> < 0xbit > </h2>
-              <p class="delayMediumReveal" style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 30px;">
+              <p class="delayMediumReveal" style="color: white; font-family: 'LiveOverfont', sans-serif; font-size: 30px;">
                 I am a 20-year-old Tool Developer specializing in the creation of cutting-edge Linux malware. My focus revolves around the development and optimization of malicious tools tailored for Linux systems, delving into the intricate realm of cybersecurity with a particular emphasis on unconventional and sophisticated hacking techniques.
               </p>
             </article>
