--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           <div id="about">
             <div id="about-photo">
               <img
-                src="https://cdn-icons-png.flaticon.com/512/207/207147.png"
+                src="https://cdn-icons-png.flaticon.com/512/4011/4011063.png"
                 width="100px"
                 height="100px"
                 alt="dedsec"
