--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
               </div>
               <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 30px;">Building Computer Virus </h3>
               <p>
-                Linux based virus,malware,ransomeware.
+                Linux based Virus,Malware,Ransomware.
               </p>
             </article>
 
