--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="0xbit" />
     <meta
       name="description"
-      content="dedsec"
+      content="is a computer enthusiast from the Philippines."
     />
     <meta
       name="keywords"
