--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="copyright" content="dedsec" />
     <meta http-equiv="content-language" content="pt-br" />
     <meta property="og:title" content="dedsec" />
-    <meta property="og:description" content="dedsec" />
+    <meta property="og:description" content="0xbit is a computer enthusiast from the Philippines." />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -92,7 +92,7 @@
                 
                 <span style="color: white; font-family: 'LiveOverfont', sans-serif;">root@</span><span style="color: red; font-family: 'LiveOverfont', sans-serif;">0xbit</span><span style="color: white; font-family: 'LiveOverfont', sans-serif;">:~#</span><span style="color: red; animation: blink 1s infinite; font-family: 'LiveOverfont', sans-serif;">_</span>
                
-                <div class = "gg" title="404" style="color: white; font-family: 'LiveOverfont', sans-serif;">GO TO SCHOOL, HOME, HACK, repeat</div>
+                <div class = "gg" title="404" style="color: white; font-family: 'LiveOverfont', sans-serif;">"I would love to change someone's desktop wallpaper.</div>
               </h1>
               <p class="typewriter" style="color: white; font-family: 'LiveOverfont', sans-serif; font-size: 23px;">
                 I am a computer enthusiast from the Philippines. I create hacking tools and exploits. Check out some of my work in the Projects section.
