--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 
                 <span style="color: white; font-family: 'LiveOverfont', sans-serif;">root@</span><span style="color: red; font-family: 'LiveOverfont', sans-serif;">0xbit</span><span style="color: white; font-family: 'LiveOverfont', sans-serif;">:~#</span><span style="color: red; animation: blink 1s infinite; font-family: 'LiveOverfont', sans-serif;">_</span>
                
-                <div class = "gg" title="404" style="color: white; font-family: 'LiveOverfont', sans-serif;">A chingchong</div>
+                <div class = "gg" title="404" style="color: white; font-family: 'LiveOverfont', sans-serif;">I love to change someone's desktop wallpaper.</div>
               </h1>
               <p class="typewriter" style="color: white; font-family: 'LiveOverfont', sans-serif; font-size: 23px;">
                 I am a computer enthusiast from the Philippines. I create hacking tools and exploits. Check out some of my work in the Projects section.
