--- a/index.html
+++ b/index.html
@@ -103,11 +103,8 @@
                 rel="noopener"
                 target="_blank"
                 class="delayExtraBigReveal"
-              >
-                Github
-              </a>
+              > Root </a>
             </div>
-
             <img
               src="assets/image/profile.png"
               alt="dedsec"
