--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <article id="about-text">
               <h2 class="delaySmallReveal" style="color: red; font-family: 'LiveOverfont', sans-serif; font-size: 40px;"> < 0xbit > </h2>
               <p class="delayMediumReveal" style="color: white; font-family: 'LiveOverfont', sans-serif; font-size: 27px;">
-                I am a 20-year-old Tool Developer specializing in the creation of cutting-edge Linux malware. My focus revolves around the development and optimization of malicious tools tailored for Linux systems, delving into the intricate realm of cybersecurity with a particular emphasis on unconventional and sophisticated hacking techniques.
+                I am a 20-year-old Tool Developer specializing in the construction of sophisticated Linux malware solutions. My expertise lies in crafting and refining malicious tools specifically designed for Linux environments. I immerse myself in the intricate domain of cybersecurity, with a pronounced focus on unconventional and advanced hacking methodologies.
               </p>
             </article>
           </div>
