--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
               > Root </a>
             </div>
             <img
-              src="assets/image/profile.png"
+              src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExb3A2MWRzZm04aWMxcjYzaXoyN2d2MXNjOXR3bHYxaG4yYXVjZ2ExbCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/l3V0JxMKeSCfFBJCg/giphy.webp"
               alt="dedsec"
               onload="SVGInject(this)"
               id="logo"
-              width="550px"
+              width="370px"
               height="400px"
             />
           </div>
@@ -122,7 +122,7 @@
           <div id="about">
             <div id="about-photo">
               <img
-                src="https://cdn-icons-png.flaticon.com/512/4011/4011063.png"
+                src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExb3A2MWRzZm04aWMxcjYzaXoyN2d2MXNjOXR3bHYxaG4yYXVjZ2ExbCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/l3V0JxMKeSCfFBJCg/giphy.webp"
                 width="100px"
                 height="100px"
                 alt="dedsec"
