--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <div class = "gg" title="404" style="color: white; font-family: 'LiveOverfont', sans-serif;">I create tools for Linux-based systems.</div>
               </h1>
               <p class="typewriter" style="color: white; font-family: 'LiveOverfont', sans-serif; font-size: 23px;">
-                I am a computer enthusiast from the Philippines. I create hacking tools and exploits. Check out some of my work in the Projects section.
+                I am a computer enthusiast from the Philippines. I create hacking tools and exploits. Check out some of my work in the Project section.
               </p>
 
               <a
@@ -159,7 +159,7 @@
             <article id="about-text">
               <h2 class="delaySmallReveal" style="color: rgb(212, 64, 64); font-family: 'LiveOverfont', sans-serif; font-size: 40px;"> < 0xbit > </h2>
               <p class="delayMediumReveal" style="color: white; font-family: 'LiveOverfont', sans-serif; font-size: 27px;">
-                I am a 20-year-old Tool Developer specializing in the construction of sophisticated Linux malware solutions. My expertise lies in crafting and refining malicious tools specifically designed for Linux environments. I immerse myself in the intricate domain of cybersecurity, with a pronounced focus on unconventional and advanced hacking methodologies.
+                I am a 21-year-old Tool Developer specializing in the construction of sophisticated Linux malware solutions. My expertise lies in crafting and refining malicious tools specifically designed for Linux environments. I immerse myself in the intricate domain of cybersecurity, with a pronounced focus on unconventional and advanced hacking methodologies.
               </p>
             </article>
           </div>
@@ -222,13 +222,13 @@
             </article>
 
             <article class="intervalCardReveal naped">
-              <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 30px;">DEDSEC_TROJANIZE</h3>
+              <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 30px;">DEDSEC_BLUEJACKER</h3>
               <p>
-                Linux based tool that can add malicious code to a legitimate python code file 
+                Bluetooth jamming device/tool that uses an ESP32 NodeMCU and an nRF module.  
               </p>
 
               <a
-                href="https://github.com/0xbitx/DEDSEC_TROJANIZE"
+                href="https://github.com/0xbitx/DEDSEC_BLUEJACKER"
                 rel="noopener"
                 target="_blank"
                 id="dedsec"
@@ -237,12 +237,12 @@
             </article>
 
             <article class="intervalCardReveal efront">
-              <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 30px;">DEDSEC_DISCORD_REVL</h3>
+              <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 30px;">DEDSEC_PTZ_EXPLOIT</h3>
               <p>
-                Linux based tool that can dump discord user information like userid, user ip, email, phonenumber, token, nitro, etc .
+                IP Camera exploit to control ip camera movement (PTZ) even without a username and password.
               </p>
               <a
-                href="https://github.com/0xbitx/DEDSEC_DISCORD_REVL"
+                href="https://github.com/0xbitx/DEDSEC_PTZ_EXPLOIT"
                 rel="noopener"
                 target="_blank"
                 id="dedsec"
@@ -276,8 +276,7 @@
               <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 30px;">Building hacking tool</h3>
               <p>
                 Esp32 deauther, Esp32 bluetooth killer
-                Esp32 Evil twin, Esp32 IR decryptor, tracker, ddos tool,
-                Arduino 3G jammer, password dumper, Phishing tool, camera exploit.
+                geo-tracker, ddos tool, 3G jammer, info-stealer, Phishing tool, camera exploit, rat.
               </p>
             </article>
 
@@ -290,9 +289,9 @@
                   alt="dedsec"
                 />
               </div>
-              <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 30px;">Building Computer Virus </h3>
+              <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 30px;">Building Computer Malware </h3>
               <p>
-                Linux based Virus, Malware, Ransomware.
+                Building all types of malware, Ransomware, Backdoor, Keylogger, Rat, Rootkit, etc.
               </p>
             </article>
 
@@ -308,7 +307,7 @@
               <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 30px;">Trolling Corrupt People</h3>
               <p>
                 trolling LGU (Local Government Unit),
-                Politicians, Government Employee in the philippines
+                Politicians, Government Employees
               </p>
             </article>
           </div>
