--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <div id="about">
             <div id="about-photo">
               <img
-                src="assets/image/profile.png"
+                src="assets/image/pff.png"
                 width="100px"
                 height="100px"
                 alt="dedsec"
@@ -115,7 +115,7 @@
               />
               <div class="about-figure figure-one icon-one delayExtraBigReveal">
                 <img
-                  src="assets/icons/web.png"
+                  src="assets/icons/C++.png"
                   width="45px"
                   height="45px"
                   alt="ícone html"
@@ -123,7 +123,7 @@
               </div>
               <div class="about-figure figure-two icon-two delayExtraBigReveal">
                 <img
-                  src="assets//icons/bitcoin.png"
+                  src="assets//icons/python.png"
                   width="45px"
                   height="45px"
                   alt="ícone css"
@@ -133,7 +133,7 @@
                 class="about-figure figure-three icon-three delayExtraBigReveal"
               >
                 <img
-                  src="assets/icons/console1.png"
+                  src="assets/icons/bash.png"
                   width="45px"
                   height="45px"
                   alt="ícone javascript"
@@ -143,7 +143,7 @@
             <article id="about-text">
               <h2 class="delaySmallReveal" style="color: rgb(212, 64, 64); font-family: 'LiveOverfont', sans-serif; font-size: 40px;"> tibx0[::-1] </h2>
               <p class="delayMediumReveal" style="color: white; font-family: 'LiveOverfont', sans-serif; font-size: 27px;">
-                I am a 21-year-old Tool Developer specializing in the construction of sophisticated Linux malware solutions. My expertise lies in crafting and refining malicious tools specifically designed for Linux environments. I immerse myself in the intricate domain of cybersecurity, with a pronounced focus on unconventional and advanced hacking methodologies.
+                I’m a 21-year-old developer who loves building hacking tools, especially for Linux systems. My work involves creating and improving command-line tools, and I spend a lot of time exploring the details of cybersecurity. I’m really drawn to the challenge of developing advanced tools, particularly ones that test system weaknesses or use creative, off-the-beaten-path hacking methods. It’s a field that keeps me on my toes, always learning and trying to push boundaries.
               </p>
             </article>
           </div>
@@ -156,31 +156,28 @@
           <div id="experience">
             <div
               class="option-experience intervalCardReveal"
-              id="experience-company"
-            >
-              <div class="company digitalhouse activeExperience">
+              id="experience-company">
+              <div class="company iot activeExperience">
                 <h3>IoT</h3>
               </div>
-              <div class="company zuplae">
+              <div class="company kernel">
                 <h3>linux kernel </h3>
               </div>
-              <div class="company contweb">
+              <div class="company os">
                 <h3>windows os</h3>
               </div>
-              <div class="company codigofontetv">
+              <div class="company network">
                 <h3>Network </h3>
               </div>
             </div>
             <div class="text-experience intervalCardReveal">
               <div>
-                <h4 class="titleExperience">
-                  IoT project
-                </h4>
-                <p class="dateExperience">Jan 2019 - Dec 2023 </p>
+                <h4 class="titleExperience"> IoT project </h4>
+                <p class="dateExperience">Jan 2019 - Jan 2025 </p>
               </div>
               <h5 class="companyExperience">Building hacking device</h5>
               <p class="changeExperience">
-                Steeped in the realm of IoT hacking, my experience revolves around crafting innovative solutions for interconnected devices. From devising security measures to navigating the intricacies of smart systems, my journey is marked by a passion for ethical hacking in the dynamic landscape of IoT technology.
+                I’ve spent a lot of time working in IoT hacking, focusing on creating clever solutions for connected devices. Whether it’s figuring out how to secure these systems or exploring the complexities of smart technology, I’m passionate about ethical hacking and the ever-changing world of IoT.
               </p>
             </div>
           </div>
@@ -191,8 +188,8 @@
         <div class="grid-layout">
           <h2 class="delaySmallReveal" style="color: rgb(212, 64, 64) 'LiveOverfont', sans-serif; font-size: 40px;">Project<span>$</span></h2>
           <div id="projects">
-            <article class="intervalCardReveal teslabank">
-              <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 30px;">DEDSEC_RANSOMWARE</h3>
+            <article class="layout">
+              <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 28px;"><span>//</span>DEDSEC_RANSOMWARE<span>></span></h3>
               <p>
                 Linux based ransomware tool that can create a ransomware code with discord integration.
               </p>
@@ -200,13 +197,12 @@
                 href="https://github.com/0xbitx/DEDSEC_RANSOMWARE"
                 rel="noopener"
                 target="_blank"
-                id="dedsec"
-                >open
+                id="dedsec"><<span>></span>
               </a>
             </article>
 
-            <article class="intervalCardReveal naped">
-              <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 30px;">DEDSEC_BLUEJACKER</h3>
+            <article class="layout">
+              <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 28px;"><span>//</span>DEDSEC_BLUEJACKER<span>></span></h3>
               <p>
                 Bluetooth jamming device/tool that uses an ESP32 NodeMCU and an nRF module.  
               </p>
@@ -215,13 +211,12 @@
                 href="https://github.com/0xbitx/DEDSEC_BLUEJACKER"
                 rel="noopener"
                 target="_blank"
-                id="dedsec"
-                >open 
+                id="dedsec"><<span>></span>
               </a>
             </article>
 
-            <article class="intervalCardReveal efront">
-              <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 30px;">DEDSEC_PTZ_EXPLOIT</h3>
+            <article class="layout">
+              <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 28px;"><span>//</span>DEDSEC_PTZ_EXPLOIT<span>></span></h3>
               <p>
                 IP Camera exploit to control ip camera movement (PTZ) even without a username and password.
               </p>
@@ -229,13 +224,11 @@
                 href="https://github.com/0xbitx/DEDSEC_PTZ_EXPLOIT"
                 rel="noopener"
                 target="_blank"
-                id="dedsec"
-                >open
+                id="dedsec"><<span>></span>
               </a>
             </article>
           </div>
-          <a href="https://github.com/0xbitx?tab=repositories" rel="noopener" target="_blank" class="delaySmallReveal" style="color: rgb(212, 64, 64) 'LiveOverfont', sans-serif; font-size: 20px;">Repositories on GitHub</a>
-        </div>
+          <a href="https://github.com/0xbitx?tab=repositories" rel="noopener" target="_blank" class="delaySmallReveal" style="color: rgb(212, 64, 64) 'Rajdhani'; font-size: 25px;"><span><</span> Repositories on GitHub <span>></span></a>      </div>
       </section>
 
       <section id="s-services">
@@ -251,7 +244,7 @@
                   alt="dedsec"
                 />
               </div>
-              <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 30px;">Building hacking tool</h3>
+              <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 30px;"><span>//</span>Building hacking tool<span>//</span></h3>
               <p>
                 Esp32 deauther, Esp32 bluetooth killer
                 geo-tracker, ddos tool, 3G jammer, info-stealer, Phishing tool, camera exploit, rat.
@@ -267,7 +260,7 @@
                   alt="dedsec"
                 />
               </div>
-              <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 30px;">Building Computer Malware </h3>
+              <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 30px;"><span>//</span>Building Malware<span>//</span> </h3>
               <p>
                 Building all types of malware, Ransomware, Backdoor, Keylogger, Rat, Rootkit, etc.
               </p>
@@ -282,7 +275,7 @@
                   alt="ícone imagem"
                 />
               </div>
-              <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 30px;">Trolling Corrupt People</h3>
+              <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 30px;"><span>//</span>Trolling Corrupt People<span>//</span></h3>
               <p>
                 trolling LGU (Local Government Unit),
                 Politicians, Government Employees
@@ -297,13 +290,11 @@
           <div id="skills">
             <article id="skills-text">
               <h2 class="delaySmallReveal" style="color: rgb(212, 64, 64) 'LiveOverfont', sans-serif; font-size: 38px;">language and tool | skill<span>$</span></h2>
-              <p class="delayMediumReveal changeDescription">
-                languages / tools
-              </p>
+              <p class="delayMediumReveal changeDescription"><span>//</span>languages | tools<span>></span></p>
             </article>
 
             <div id="skills-cards">
-              <article class="html intervalCardReveal">
+              <article class="icon1 intervalCardReveal">
                 <span class="skills-cards-name-high">Bash</span>
                 <img
                   src="assets/icons/bash.png"
@@ -313,7 +304,7 @@
                   class="skills-icons"
                 />
               </article>
-              <article class="css intervalCardReveal">
+              <article class="icon2 intervalCardReveal">
                 <span class="skills-cards-name-high">Burpsuite</span>
                 <img
                   src="assets/icons/burpsuite.png"
@@ -323,7 +314,7 @@
                   class="skills-icons"
                 />
               </article>
-              <article class="js intervalCardReveal">
+              <article class="icon3 intervalCardReveal">
                 <span class="skills-cards-name-high">Wireshark</span>
                 <img
                   src="assets/icons/wireshark.png"
@@ -333,7 +324,7 @@
                   class="skills-icons"
                 />
               </article>
-              <article class="sass intervalCardReveal">
+              <article class="icon4 intervalCardReveal">
                 <span class="skills-cards-name-high">Maltego</span>
                 <img
                   src="assets/icons/maltego.webp"
@@ -343,7 +334,7 @@
                   class="skills-icons"
                 />
               </article>
-              <article class="react intervalCardReveal">
+              <article class="icon5 intervalCardReveal">
                 <span class="skills-cards-name-low">Arduino</span>
                 <img
                   src="assets/icons/arduino.png"
@@ -353,7 +344,7 @@
                   class="skills-icons"
                 />
               </article>
-              <article class="next intervalCardReveal">
+              <article class="icon6 intervalCardReveal">
                 <span class="skills-cards-name-low">C++</span>
                 <img
                   src="assets/icons/C++.png"
@@ -363,7 +354,7 @@
                   class="skills-icons"
                 />
               </article>
-              <article class="styled intervalCardReveal">
+              <article class="icon7 intervalCardReveal">
                 <span class="skills-cards-name-low aumento-hover"
                   >Ghidra</span
                 >
@@ -375,7 +366,7 @@
                   class="skills-icons"
                 />
               </article>
-              <article class="tailwind intervalCardReveal">
+              <article class="icon8 intervalCardReveal">
                 <span class="skills-cards-name-low">Python</span>
                 <img
                   src="assets/icons/python.png"
