--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <link
       rel="shortcut icon"
-      href="assets/icons/console.png"
+      href="assets/icons/key.png"
       type="image/x-icon"
     />
-    <link rel="icon" href="assets/icons/console.png" />
+    <link rel="icon" href="assets/icons/key.png" />
     <link rel="apple-touch-icon" href="assets/image/logo-page.svg" />
     <link rel="canonical" href="https://github.com/0xbitx" />
     <script src="assets/js/svg-inject.min.js"></script>
@@ -74,12 +74,7 @@
     <header>
       <div class="grid-layout">
         <nav>
-          <img
-            src="assets/icons/key.png"
-            alt="Logo dedsec"
-            width="90px"
-            height="90px"
-          />
+          <img src="assets/icons/key.png" alt="Logo dedsec" width="90px" height="90px"/>
           <div class="mobile-menu">
             <div class="line1"></div>
             <div class="line2"></div>
@@ -119,13 +114,17 @@
           <div id="home">
             <div id="home-container-text">
               <h1 class="delayMediumReveal">
-                <span style="color: white; font-family: 'LiveOverfont', sans-serif;">root@</span><span style="color: rgb(212, 64, 64); font-family: 'LiveOverfont', sans-serif;">0xbit</span><span style="color: white; font-family: 'LiveOverfont', sans-serif;">:~#</span><span style="color: red; animation: blink 1s infinite; font-family: 'LiveOverfont', sans-serif;">_</span>
+                <span style="color: white; font-family: 'LiveOverfont', sans-serif;
+                ">root@</span><span style="color: rgb(212, 64, 64); font-family: 'LiveOverfont', sans-serif;"
+                >0xbit</span><span style="color: white; font-family: 'LiveOverfont', sans-serif;"
+                >> cat readme.txt</span><span style="color: red; animation: blink 1s infinite; font-family: 'LiveOverfont', sans-serif;"
+                >_</span>
                 <div class="gg" title="404" style="color: white; font-family: 'LiveOverfont', sans-serif;">I create tools for Linux-based systems.</div>
               </h1>
               <p class="typewriter" style="color: white; font-family: 'LiveOverfont', sans-serif; font-size: 23px;">
                 I am a computer enthusiast from the Philippines. I create hacking tools and exploits. Check out some of my work in the Project section.
               </p>
-              <a href="https://github.com/0xbitx" rel="noopener" style="font-family: 'LiveOverfont', sans-serif; font-size: 25px;" target="_blank" class="delayExtraBigReveal"> >> </a>
+              <a href="https://github.com/0xbitx" rel="noopener" style="font-family: 'LiveOverfont', sans-serif; font-size: 25px;" target="_blank" class="delayExtraBigReveal"> ➤ </a>
             </div>
           </div>
         </div>
@@ -166,7 +165,7 @@
               />
               <div class="about-figure figure-one icon-one delayExtraBigReveal">
                 <img
-                  src="assets/icons/C++.png"
+                  src="assets/icons/github1.png"
                   width="45px"
                   height="45px"
                   alt="ícone html"
@@ -174,7 +173,7 @@
               </div>
               <div class="about-figure figure-two icon-two delayExtraBigReveal">
                 <img
-                  src="assets//icons/python.png"
+                  src="assets//icons/book.png"
                   width="45px"
                   height="45px"
                   alt="ícone css"
@@ -184,7 +183,7 @@
                 class="about-figure figure-three icon-three delayExtraBigReveal"
               >
                 <img
-                  src="assets/icons/bash.png"
+                  src="assets/icons/discord.png"
                   width="45px"
                   height="45px"
                   alt="ícone javascript"
