--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           <div id="about">
             <div id="about-photo">
               <img
-                src="assets/image/pff.png"
+                src="https://media4.giphy.com/media/46yPfgO81ZalJSKu74/giphy.webp?cid=ecf05e475p6s7p4qsksw5g48qs4myciq9jrs901xyvliuug7&ep=v1_gifs_related&rid=giphy.webp&ct=s"
                 width="100px"
                 height="100px"
                 alt="dedsec"
